# RPGBattler

./: CMakeLists.txt  IDENTIFICATION.txt  README.txt  demo  presentation.url
app/: rpgbattle.cpp
data/save/: default_save.JSON  demo_save.JSON
data/skills/: skills.JSON
include/stats/: attributes.hpp  calculations.hpp  character.hpp  combat.hpp  enemy.hpp  save.hpp  statistics.hpp  ultimate_skill.hpp
include/tools/: json_tools.hpp
include/ui/: scene.hpp
lib/: calculations.cpp  character.cpp  combat.cpp  enemy.cpp  json_tools.cpp  scene.cpp
